After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722105 - tab title does not update when renaming folder
tab title does not update when renaming folder
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Tabs
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
: 703225 722703 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-01-13 13:25 UTC by freddi34
Modified: 2014-02-17 22:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description freddi34 2014-01-13 13:25:02 UTC
When a folder is renamed which is also opened as a tab, the title of the tab is not updated whereas for example the path bar reflects the new name.

Steps to reproduce:
You have a folder structure
 A
 |--B
1. Open a tab of folder A
2. Open a tab of folder B
3. Click on tab of A
4. Select the folder B and rename it in C
   The tab title of B does not change into C.
5. Click on tab of B
   The Tab title of B does still not change.

Nautilus 3.8.2
Ubuntu 13.10
Comment 1 Username 2014-01-23 01:08:40 UTC
As suggested by Antonio, this one could be related:

https://bugzilla.gnome.org/show_bug.cgi?id=722703
Comment 2 Cosimo Cecchi 2014-02-17 22:11:16 UTC
Thanks for the report, I fixed this in git master now.
Comment 3 Cosimo Cecchi 2014-02-17 22:11:20 UTC
*** Bug 722703 has been marked as a duplicate of this bug. ***
Comment 4 Cosimo Cecchi 2014-02-17 22:44:39 UTC
*** Bug 703225 has been marked as a duplicate of this bug. ***