slot: don't forget to update title for non-active slots

Otherwise we'll leave the old title behind on e.g. window tabs.

https://bugzilla.gnome.org/show_bug.cgi?id=722105